# modul38

BlurEditor/: CMakeLists.txt  main.cpp
BlureImige/: CMakeLists.txt  main.cpp
WebView/: CMakeLists.txt  main.cpp
blureApp/: CMakeLists.txt  blurApp.ui  blurerwindow.h  main.cpp
build-twoWindow-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  WebView.ilk  cmake_install.cmake
build-twoWindow-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-1eba1e93e168a4d8c984.json  cmakeFiles-v1-62ff4d567644416ae335.json  codemodel-v2-21f80ffb97f71a031e6d.json  index-2022-08-12T06-09-15-0308.json  target-WebView-Debug-8f0a1e6d47182f2fc354.json  target-WebView_autogen-Debug-11f9384e0a8405dac533.json
build-twoWindow-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-097e07e4e03329f0ccae.json  cmakeFiles-v1-49826982727682775a1e.json  codemodel-v2-fa9b9c5b31993d8b190d.json  index-2022-08-12T06-05-37-0154.json  target-twoWindow-Debug-c71b43009a9468739735.json  target-twoWindow_autogen-Debug-478aa17980cbd6e19ba5.json
build-twoWindow-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-twoWindow-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QObject.B5BB8A4B394FA2DA.idx  QString.B5039B57AB7E586F.idx  algorithm.47B0A28676103868.idx  (+109 more)
build-twoWindow-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/WebView_autogen/include/: main.moc.d
soundButton/: CMakeLists.txt  main.cpp
soundButton2/: CMakeLists.txt  main.cpp
twoWindow/: CMakeLists.txt  main.cpp
untitled2/: CMakeLists.txt
untitled3/: CMakeLists.txt  main.cpp
